Bug 746632 - If no fallback colour is specified we shouldn't draw anything when the URL fails to resolve. r=dbaron